--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -76,5 +76,7 @@
     src: url('../fonts/hero-icon-font.ttf') ;
     font-weight: normal;
     font-style: normal;
-    font-display: block
+    font-display: swap;
+    font-display: block;
+    font-display: swap;
 }
