--- a/styles/styles.css
+++ b/styles/styles.css
@@ -504,6 +504,11 @@ main>.section:first-of-type {
   margin-top: 0;
 }
 
+body.hide-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
 @media (width >=900px) {
   main>.section>div {
     padding: 0 32px;
